--- a/src/css/base.css
+++ b/src/css/base.css
@@ -23,4 +23,4 @@ body { font: 12px Arial,Verdana,"\5b8b\4f53"; color: #777; background: #fff; }
 
 .clearfix::after { content: ""; display: block; height: 0; clear: both; overflow: hidden; visibility: hidden; zoom: 1; }
 
-.tipcolor { color: #FFA500; }
+.highcolor { color: #FFA500; }
