--- a/src/sass/_var.scss
+++ b/src/sass/_var.scss
@@ -1,5 +1,4 @@
 // 头部
-$pub_nav_h:30px;
 
 
 $container:1200px;
@@ -16,5 +15,5 @@ $show : block;
 $hide:none;
 
 $mainBGCColor:#fff;
-$tipcolor:#FFA500;
+$highcolor:#FFA500;
 $mainFontColor:#777;
