--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*添加公共样式*/
 /*内容、版心 提取 */
-body { font: 12px Arial,Verdana,"\5b8b\4f53"; color: #777; background: #fff; }
+body { font: 12px/150% "Hiragino Sans GB", "Microsoft Yahei", arial, 宋体, "Helvetica Neue", Helvetica, STHeiTi, sans-serif; color: #777; background: #fff; }
 
 .container { width: 1200px; margin: 0 auto; }
 
