--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -11,7 +11,7 @@ textarea { resize:none; } /*防止拖动*/
 img {border:0; vertical-align:middle; }  
 /*  去掉图片低测默认的3像素空白缝隙，或者用display：block也可以*/
 table { border-collapse:collapse; }
-a {text-decoration:none; }
+a {text-decoration:none;color: #777777; }
 h1,h2,h3,h4,h5,h6 {font-weight:normal;font-size:1em;}  /*设置h标签的大小，设置跟父亲一样大的字体font-size:100%;*/
 i,em{font-style:normal;text-decoration:none;}
 
