--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -4,7 +4,8 @@
 /*添加公共样式*/
 /*内容、版心 提取 */
 body {
-    font:12px Arial,Verdana,"\5b8b\4f53";
+    // font:12px Arial,Verdana,"\5b8b\4f53";
+    font:12px/150% "Hiragino Sans GB", "Microsoft Yahei", arial, 宋体, "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
     color:$mainFontColor;
     background:#fff;
 }
