--- a/src/css/bottom.css
+++ b/src/css/bottom.css
@@ -1,1 +1,39 @@
-/* 底部样式 */
+.pub-footer { border-top: 5px solid #ccc; }
+
+.pub-footer .pub-footer-top .same { height: 147px; float: left; margin: 30px 0; }
+
+.pub-footer .pub-footer-top .same h5 { font-size: 16px; padding-top: 3px; }
+
+.pub-footer .pub-footer-top .pub-footer-left { width: 250px; color: #000000; }
+
+.pub-footer .pub-footer-top .pub-footer-left h5 { margin-bottom: 20px; }
+
+.pub-footer .pub-footer-top .pub-footer-left .tel img { display: block; height: 71px; width: 71px; margin-right: 9px; }
+
+.pub-footer .pub-footer-top .pub-footer-left .tel p { font-size: 17px; color: #FFA500; margin-bottom: 14px; }
+
+.pub-footer .pub-footer-top .pub-footer-center { width: 688px; border-right: 1px solid #ccc; border-left: 1px solid #ccc; }
+
+.pub-footer .pub-footer-top .pub-footer-center dl { float: left; width: 20%; }
+
+.pub-footer .pub-footer-top .pub-footer-center dl dt, .pub-footer .pub-footer-top .pub-footer-center dl dd { padding-left: 25px; }
+
+.pub-footer .pub-footer-top .pub-footer-center dl dt { color: #666666; }
+
+.pub-footer .pub-footer-top .pub-footer-center dl dt h5 { margin-bottom: 9px; }
+
+.pub-footer .pub-footer-top .pub-footer-center dl dd { font-size: 12px; line-height: 22px; }
+
+.pub-footer .pub-footer-top .pub-footer-right { width: 255px; padding-left: 5px; }
+
+.pub-footer .pub-footer-top .pub-footer-right div { float: left; margin-left: 25px; }
+
+.pub-footer .pub-footer-top .pub-footer-right div img { display: block; width: 84px; height: 75px; }
+
+.pub-footer .pub-footer-top .pub-footer-right div p.top { padding-top: 4px; padding-left: 4px; height: 27px; }
+
+.pub-footer .pub-footer-top .pub-footer-right div p.bottom { line-height: 41px; }
+
+.pub-footer .pub-footer-bottom { height: 66px; border-top: 1px solid #ccc; text-align: center; }
+
+.pub-footer .pub-footer-bottom p { color: #666; word-spacing: 5px; padding: 10px 0; }
